--- a/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.html
+++ b/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.html
@@ -11,5 +11,8 @@
     formControlName="operator"
   ></mix-select>
 
-  <mix-filter-input></mix-filter-input>
+  <mix-filter-input
+    [dataType]="form.value.column!.dataType"
+    (valueChange)="filterValueChange($event)"
+  ></mix-filter-input>
 </div>
