--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -61,6 +61,7 @@
           <mix-dynamic-filter
             [size]="'m'"
             [columns]="vm.columns"
+            (filtersChange)="onFilterChange($event)"
           ></mix-dynamic-filter>
 
           <ng-template #tpl let-hide>
