feat() update code filter

--- a/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/database-data.component.html
@@ -61,6 +61,7 @@
           <mix-dynamic-filter
             [size]="'m'"
             [columns]="vm.columns"
+            [filters]="vm.request.queries || []"
             (filtersChange)="onFilterChange($event)"
           ></mix-dynamic-filter>
 
