--- a/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.html
+++ b/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.html
@@ -12,6 +12,7 @@
   ></mix-select>
 
   <mix-filter-input
+    [value]="filter.value"
     [dataType]="form.value.column!.dataType"
     (valueChange)="filterValueChange($event)"
   ></mix-filter-input>
