--- a/libs/mix-share/src/components/database-select/database-select.component.scss
+++ b/libs/mix-share/src/components/database-select/database-select.component.scss
@@ -45,7 +45,10 @@
       opacity: 1;
       background: var(--blue-500);
       color: var(--white-0);
-      opacity: 0.7;
+    }
+
+    &:hover {
+      opacity: 0.5;
     }
   }
 }
