feat() update code fix redirect url

--- a/libs/mix-ui/src/dynamic-filter/dynamic-filter.component.html
+++ b/libs/mix-ui/src/dynamic-filter/dynamic-filter.component.html
@@ -30,6 +30,8 @@
       <mix-button class="ms-auto" type="outline" (click)="ref.close()"
         >Close</mix-button
       >
+
+      <mix-button (click)="applyChange(); ref.close()">Apply</mix-button>
     </div>
   </div>
 </ng-template>
