--- a/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.html
+++ b/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.html
@@ -16,4 +16,6 @@
     [dataType]="form.value.column!.dataType"
     (valueChange)="filterValueChange($event)"
   ></mix-filter-input>
+
+  <mix-button>X</mix-button>
 </div>
