--- a/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.scss
+++ b/libs/mix-ui/src/dynamic-filter/filter-item/filter-item.component.scss
@@ -1,6 +1,6 @@
 .filter-item {
   display: grid;
-  grid-template-columns: 120px 150px auto;
+  grid-template-columns: 120px 150px auto 50px;
   grid-gap: 4px;
   margin-bottom: 6px;
 }
