feat(): update task swimlane

--- a/apps/mix-cms/src/assets/styles/variables.scss
+++ b/apps/mix-cms/src/assets/styles/variables.scss
@@ -53,6 +53,8 @@ html {
   --text-size-l: 1.125rem;
   --text-size-xl: 1.25rem;
   --text-size-xxl: 1.5rem;
+
+  --blue-02: #008aa8;
 }
 
 html[mode='dark'] {
