--- a/libs/mix-share/src/modules/task-manage/components/task-create/task-create.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-create/task-create.component.html
@@ -1,20 +1,27 @@
-<div class="task-create"
-     [formGroup]="taskForm">
+<div class="task-create" [formGroup]="taskForm">
   <div class="text-l">Create Task</div>
 
-  <div class="mt-4 mb-1 text-sub text-500">Task Type</div>
-  <mix-select [items]="typeItems"
-              [labelProcess]="typeLabel"
-              formControlName="type"></mix-select>
+  <ng-container *ngIf="parentTask">
+    <div class="mt-4 mb-1 text-sub text-500">Task Type</div>
+    <mix-select
+      [items]="typeItems"
+      [labelProcess]="typeLabel"
+      formControlName="type"
+    ></mix-select>
 
-  <div class="mt-3 mb-1 text-sub text-500">Task Priority</div>
-  <mix-select [items]="prorityItems"
-              [labelProcess]="priorityLabel"
-              formControlName="taskPriority"></mix-select>
+    <div class="mt-3 mb-1 text-sub text-500">Task Priority</div>
+    <mix-select
+      [items]="prorityItems"
+      [labelProcess]="priorityLabel"
+      formControlName="taskPriority"
+    ></mix-select>
+  </ng-container>
 
   <div class="mt-3 mb-1 text-sub text-500">Short Summary</div>
-  <mix-input formControlName="title"
-             placeHolder="Quick description about your task"></mix-input>
+  <mix-input
+    formControlName="title"
+    placeHolder="Quick description about your task"
+  ></mix-input>
 
   <div class="mt-3 mb-1 text-sub text-500">Description</div>
   <mix-rich-text-editor formControlName="description"></mix-rich-text-editor>
@@ -22,12 +29,18 @@
   <div class="mt-3 mb-1 text-sub text-500">Reporter</div>
   <mix-user-select formControlName="reporter"></mix-user-select>
 
-  <div *ngIf="loadingState$ | async as state"
-       class="mt-4 d-flex justify-content-end align-items-center gap-2">
-    <mix-button [loading]="state === 'Loading'"
-                (click)="createTask()">Create</mix-button>
-    <mix-button type="outline"
-                [disabled]="state === 'Loading'"
-                (click)="dialogRef.close()">Cancel</mix-button>
+  <div
+    *ngIf="loadingState$ | async as state"
+    class="mt-4 d-flex justify-content-end align-items-center gap-2"
+  >
+    <mix-button [loading]="state === 'Loading'" (click)="createTask()"
+      >Create</mix-button
+    >
+    <mix-button
+      type="outline"
+      [disabled]="state === 'Loading'"
+      (click)="dialogRef.close()"
+      >Cancel</mix-button
+    >
   </div>
 </div>
