--- a/libs/mix-share/src/modules/task-manage/task-manage.component.html
+++ b/libs/mix-share/src/modules/task-manage/task-manage.component.html
@@ -1,24 +1,41 @@
-<div *ngIf="loadingState() as loading"
-     class="data-table-page">
+<div *ngIf="loadingState() as loading" class="data-table-page task-manage">
   <div class="data-table-page__main-container">
-    <mix-sub-toolbar [description]="'listing'"
-                     [title]="'Kanban Board' | transloco">
+    <mix-sub-toolbar
+      [description]="'listing'"
+      [title]="'Kanban Board' | transloco"
+    >
       <div class="toolbar-separator"></div>
-      <mix-button (click)="addTask()"
-                  size="s"><span class="material-symbols-outlined"> add </span>&nbsp;
-        {{ 'Create item' | transloco }}</mix-button>
+      <mix-button (click)="addTask()" size="s"
+        ><span class="material-symbols-outlined"> add </span>&nbsp;
+        {{ 'New' | transloco }}</mix-button
+      >
     </mix-sub-toolbar>
 
     <mix-task-filter></mix-task-filter>
 
-    <div *ngIf="store.vm$ | async as vm"
-         class="task-manage__main-view"
-         cdkDropListGroup>
-      <mix-task-dnd-list *ngFor="let status of taskStatuses"
-                         class="task-dnd-list"
-                         [listTasks]="store.getTaskByStatus(status)"
-                         [status]="status">
-      </mix-task-dnd-list>
+    <div class="task-manage__header">
+      <div
+        class="title text-uppercase text-truncate"
+        *ngFor="let status of taskStatuses"
+        [style.--color]="TaskStatusColors[status]"
+      >
+        {{ TaskStatusDisplay[status] }}
+      </div>
+    </div>
+
+    <div
+      *ngIf="store.vm$ | async as vm"
+      class="task-manage__main-view"
+      cdkDropListGroup
+    >
+      <ng-container *ngIf="store.getParentTasks() | async as tasks">
+        <mix-task-group-list
+          *ngFor="let task of tasks; trackByProp: 'id'"
+          [parentTask]="task"
+          [taskStatuses]="taskStatuses"
+        >
+        </mix-task-group-list>
+      </ng-container>
     </div>
   </div>
 </div>
