--- a/libs/mix-share/src/modules/task-manage/task-manage.component.scss
+++ b/libs/mix-share/src/modules/task-manage/task-manage.component.scss
@@ -1,10 +1,35 @@
 .task-manage {
+  --task-min-col-w: 200px;
+  --task-col-w: 320px;
+  --task-list-bg: rgb(244 245 247);
+  --task-col-padding: 8px 16px;
+
+  &__header {
+    display: flex;
+    width: 100%;
+    gap: 12px;
+    padding: 0px 16px;
+    margin-top: 16px;
+
+    .title {
+      --color: #fff;
+
+      padding: var(--task-col-padding);
+      min-width: var(--task-min-col-w);
+      width: var(--task-col-w);
+      background-color: var(--task-list-bg);
+      border-left: 6px solid var(--color);
+      border-radius: 0.125rem;
+    }
+  }
+
   &__main-view {
     width: 100%;
     height: 100%;
-    padding: 16px;
+    padding: 0px 16px;
     display: flex;
-    gap: 12px;
+    flex-direction: column;
+    overflow: auto;
   }
 
   &__filter {
@@ -15,21 +40,4 @@
       width: 300px;
     }
   }
-}
-
-.ad-task-container {
-  width: 800px;
-  padding: 12px 12px 18px 12px;
-  height: 900px;
-  display: flex;
-  flex-direction: column;
-}
-
-.task-dnd-list {
-  display: block;
-  min-height: 400px;
-  min-width: 200px;
-  width: 320px;
-  background-color: rgb(244 245 247);
-  border-radius: 0.125rem;
 }
