--- a/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.scss
@@ -11,6 +11,12 @@
     transform: rotate(-90deg);
   }
 
+  &__title {
+    max-width: 240px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &.--open {
     color: var(--blue-02, #008aa8);
     border-bottom: unset;
