feat(): fix build

--- a/libs/mix-share/src/modules/task-manage/components/task-header/task-header.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-header/task-header.component.html
@@ -6,4 +6,8 @@
   >
     {{ TaskStatusDisplay[status] }}
   </div>
+
+  <div class="add-btn">
+    <mix-icon-button name="add"></mix-icon-button>
+  </div>
 </div>
