feat(): update task manage

--- a/libs/mix-share/src/modules/task-manage/components/task-group-list/task-group-list.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-group-list/task-group-list.component.scss
@@ -12,3 +12,10 @@
   background-color: var(--task-list-bg);
   border-radius: 0.125rem;
 }
+
+.task-dnd-skeleton {
+  min-height: 160px;
+  width: var(--task-col-collapse-w);
+  background-color: var(--task-list-bg);
+  border-radius: 0.125rem;
+}
