--- a/libs/mix-share/src/modules/task-manage/task-manage.component.scss
+++ b/libs/mix-share/src/modules/task-manage/task-manage.component.scss
@@ -3,6 +3,7 @@
   --task-col-w: 320px;
   --task-list-bg: rgb(244 245 247);
   --task-col-padding: 8px 16px;
+  --task-col-collapse-w: 50px;
 
   &__main-view {
     max-width: calc(100% - 28px);
