--- a/libs/mix-share/src/modules/task-manage/components/task-header/task-header.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-header/task-header.component.scss
@@ -17,7 +17,7 @@
   .add-btn {
     background-color: var(--task-list-bg);
     border-radius: 0.125rem;
-    width: 60px;
+    width: var(--task-col-collapse-w);
     display: flex;
     justify-content: center;
     align-items: center;
