feat(): update cache

--- a/apps/mix-cms/src/styles.scss
+++ b/apps/mix-cms/src/styles.scss
@@ -23,6 +23,7 @@
 @import './assets/styles/scrollbar.scss';
 @import './assets/styles/ag-table.scss';
 @import './assets/styles/ultilities.scss';
+@import './assets//styles/ripple.scss';
 
 * {
   box-sizing: border-box;
