--- a/apps/mix-cms/src/assets/styles/reboot/reboot.scss
+++ b/apps/mix-cms/src/assets/styles/reboot/reboot.scss
@@ -6,7 +6,7 @@ body {
   height: 100%;
   font-feature-settings: 'calt' 0;
   color: var(--text-color-primary) !important;
-  font-size: var(--text-size-s, 0.75rem) !important;
+  font-size: 14px !important;
   font-family: Manrope, Inter, Source Sans Pro, -apple-system,
     BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif !important;
 }
