feat(): update cache

--- a/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.html
@@ -1,4 +1,4 @@
-<div class="w-100 task-parent-card text-m" [class.--open]="open">
+<div class="w-100 task-parent-card text-m ripple-gray" [class.--open]="open">
   <mix-button [size]="'xs'" [type]="'icon'" (click)="expandClick.emit()"
     ><span class="mix-icon expand-icon text-xxl">expand_more</span>
   </mix-button>
