--- a/libs/mix-share/src/components/main-side-menu/main-side-menu.component.html
+++ b/libs/mix-share/src/components/main-side-menu/main-side-menu.component.html
@@ -18,7 +18,7 @@
       tuiDropdownDirection="bottom"
     >
       <div
-        class="side-menu__item ripple"
+        class="side-menu__item ripple-gray"
         [ngClass]="{
           '--open': isMenuSelected(item, selectedMenu),
           '--active': isMenuSelected(item, selectedMenu)
