--- a/libs/mix-share/src/modules/task-manage/components/task-create/task-create.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-create/task-create.component.html
@@ -1,21 +1,21 @@
 <div class="task-create" [formGroup]="taskForm">
   <div class="text-l">Add New {{ parentTask ? 'Task' : 'Swimlane' }}</div>
 
-  <ng-container *ngIf="parentTask">
-    <div class="mt-4 mb-1 text-sub text-500">Task Type</div>
-    <mix-select
-      [items]="typeItems"
-      [labelProcess]="typeLabel"
-      formControlName="type"
-    ></mix-select>
+  @if(parentTask) {
+  <div class="row mt-4 mb-1">
+    <div class="col-6">
+      <div class="mb-1 text-sub text-500">Task Type</div>
+      <task-type-select formControlName="type"></task-type-select>
+    </div>
 
-    <div class="mt-3 mb-1 text-sub text-500">Task Priority</div>
-    <mix-select
-      [items]="prorityItems"
-      [labelProcess]="priorityLabel"
-      formControlName="taskPriority"
-    ></mix-select>
-  </ng-container>
+    <div class="col-6">
+      <div class="mb-1 text-sub text-500">Task Priority</div>
+      <task-priority-select
+        formControlName="taskPriority"
+      ></task-priority-select>
+    </div>
+  </div>
+  }
 
   <div class="mt-3 mb-1 text-sub text-500">Short Summary</div>
   <mix-input
