feat(): update reuse style and font

--- a/libs/share-styles/src/styles/reboot/reboot.full-hd.scss
+++ b/libs/share-styles/src/styles/reboot/reboot.full-hd.scss
@@ -1,6 +1,5 @@
 @media only screen and (min-width: 1921px) and (max-width: 2554px) {
-  html,
   body {
-    font-size: var(--text-size-m) !important;
+    font-size: var(--text-size-s) !important;
   }
 }
