--- a/libs/share-styles/src/styles/reboot/reboot.hd.scss
+++ b/libs/share-styles/src/styles/reboot/reboot.hd.scss
@@ -1,6 +1,5 @@
 @media only screen and (max-width: 1660px) {
-  html,
   body {
-    font-size: var(--text-size-xs) !important;
+    font-size: var(--text-size-s) !important;
   }
 }
