--- a/libs/share-styles/src/styles/material-symbol.scss
+++ b/libs/share-styles/src/styles/material-symbol.scss
@@ -3,14 +3,14 @@
   font-family: 'Material Symbols Outlined';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/mat-symbol-400.woff2') format('woff2');
+  src: url('./fonts/mat-symbol-400.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'Material Symbols Outlined';
   font-style: normal;
   font-weight: 200;
-  src: url('../fonts/mat-symbol-200.woff2') format('woff2');
+  src: url('./fonts/mat-symbol-200.woff2') format('woff2');
 }
 
 .material-symbols-outlined {
