--- a/libs/share-styles/src/styles/reboot/reboot.scss
+++ b/libs/share-styles/src/styles/reboot/reboot.scss
@@ -4,10 +4,18 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   height: 100%;
-  font-family: var(--font);
+  font-feature-settings: 'calt' 0;
+}
+
+body {
+  height: 100%;
   font-feature-settings: 'calt' 0;
   color: var(--text-color-primary) !important;
-  font-size: var(--text-size-s, 0.75rem) !important;
+  font-size: var(--text-size-s) !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  font-family: Manrope, Inter, Source Sans Pro, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif !important;
 }
 
 p {
