feat(): standardlized font size

--- a/apps/mix-cms/src/app/pages/portal/dashboard/dashboard.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/dashboard/dashboard.component.scss
@@ -21,7 +21,7 @@
     align-items: center;
     gap: 12px;
     font-weight: 600;
-    font-size: var(--text-size-xl);
+    font-size: var(--text-size-m);
 
     &::after {
       flex-grow: 1;
