--- a/apps/mix-cms/src/app/pages/portal/dashboard/dashboard.component.html
+++ b/apps/mix-cms/src/app/pages/portal/dashboard/dashboard.component.html
@@ -2,22 +2,23 @@
   <div class="tui-island__category mt-6">
     {{ currentDay }}, {{ currentDate }}
   </div>
-  <h1 class="bolt-header-title-l">
+  <h1 class="text-xl text-bold">
     {{ helloPrefix }}, {{ userName$ | async | titlecase }}
   </h1>
 
-  <div class="text-l mt-5">Congratulations, your shop this month:</div>
+  <div class="text-l mt-3">Congratulations, your shop this month:</div>
   <div class="chart__line mt-4">Status</div>
 
   <div class="dashboard-page__chart-tile mt-3">
     <div class="row chart__container">
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['success']">
+        <div class="number-chart" [style.--chart-color]="colorMap['success']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(success$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(success$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
@@ -27,12 +28,13 @@
       </div>
 
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['paid']">
+        <div class="number-chart" [style.--chart-color]="colorMap['paid']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(paid$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(paid$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
@@ -42,12 +44,13 @@
       </div>
 
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['wait']">
+        <div class="number-chart" [style.--chart-color]="colorMap['wait']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(waitToPay$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(waitToPay$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
@@ -57,12 +60,13 @@
       </div>
 
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['shipping']">
+        <div class="number-chart" [style.--chart-color]="colorMap['shipping']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(shipping$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(shipping$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
@@ -72,12 +76,13 @@
       </div>
 
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['error']">
+        <div class="number-chart" [style.--chart-color]="colorMap['error']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(canceled$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(canceled$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
@@ -91,12 +96,13 @@
 
     <div class="row chart__container mt-2">
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['gateway']">
+        <div class="number-chart" [style.--chart-color]="colorMap['gateway']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(onePay$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(onePay$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
@@ -109,12 +115,13 @@
       </div>
 
       <div class="col-auto">
-        <div class="number-chart"
-             [style.--chart-color]="colorMap['gateway']">
+        <div class="number-chart" [style.--chart-color]="colorMap['gateway']">
           <div class="d-flex gap-1 align-items-end">
-            <div class="number-chart__number"
-                 [countUp]="(paypal$ | async) || 0"
-                 [duration]="1000"></div>
+            <div
+              class="number-chart__number"
+              [countUp]="(paypal$ | async) || 0"
+              [duration]="1000"
+            ></div>
             <div class="text-s text-sub">item(s)</div>
           </div>
 
