--- a/libs/share-styles/src/styles/reboot/reboot.scss
+++ b/libs/share-styles/src/styles/reboot/reboot.scss
@@ -11,8 +11,8 @@ body {
   height: 100%;
   margin: 0 !important;
   padding: 0 !important;
-  font-family: Manrope, Inter, Source Sans Pro, -apple-system,
-    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif !important;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, sans-serif !important;
   color: var(--text-color-primary) !important;
   font-size: var(--text-size-s) !important;
 }
