feat(): change header

--- a/libs/mix-share/src/modules/task-manage/components/task-header/task-header.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/task-header/task-header.component.html
@@ -1,6 +1,6 @@
 <div class="task-header">
   <div
-    class="title text-uppercase text-truncate"
+    class="title text-500 text-truncate"
     *ngFor="let status of taskStatuses"
     [style.--color]="TaskStatusColors[status]"
   >
