--- a/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-parent-card/task-parent-card.component.scss
@@ -15,6 +15,8 @@
     max-width: 240px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: var(--text-size-s);
   }
 
   &.--open {
