feat(): change header

--- a/libs/mix-share/src/components/user-select/user-select.component.html
+++ b/libs/mix-share/src/components/user-select/user-select.component.html
@@ -1,6 +1,7 @@
 <tui-select
   [formControl]="control"
   [tuiTextfieldLabelOutside]="true"
+  [tuiTextfieldSize]="size"
   [valueContent]="cardContent"
 >
   Choose a users
