--- a/libs/mix-share/src/modules/task-manage/task-manage.component.scss
+++ b/libs/mix-share/src/modules/task-manage/task-manage.component.scss
@@ -1,7 +1,7 @@
 .task-manage {
   --task-min-col-w: 200px;
   --task-col-w: 320px;
-  --task-list-bg: rgb(244 245 247);
+  --task-list-bg: rgba(244, 244, 244, 1);
   --task-col-padding: 8px 16px;
   --task-col-collapse-w: 50px;
 
