--- a/libs/mix-share/src/modules/task-manage/components/task-card/task-card.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-card/task-card.component.scss
@@ -7,12 +7,13 @@
 
 .task-card {
   padding: 10px;
-  border-radius: 0.125rem;
+  border-radius: 0.625rem;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 0.1s;
   box-shadow: #091e4240 0 1px 2px;
   background-color: rgb(255, 255, 255);
+  border: 1px solid var(--border-color-default);
 
   &:hover {
     background-color: rgb(235 236 240);
@@ -21,4 +22,5 @@
 
 .task-card-wrap {
   cursor: grab;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
