--- a/libs/mix-share/src/modules/task-manage/components/task-dnd-list/task-dnd-list.component.scss
+++ b/libs/mix-share/src/modules/task-manage/components/task-dnd-list/task-dnd-list.component.scss
@@ -19,9 +19,14 @@
 
 .cdk-drag-preview {
   box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: unset;
+
+  .task-card-wrap {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+      0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    transform: rotate(5deg);
+    border-radius: 0.6rem;
+  }
 }
 
 .cdk-drag-placeholder {
@@ -29,6 +34,7 @@
     background-color: rgba(150, 150, 200, 0.1);
     border: 1px dashed #abc;
     margin: 5px;
+    border-radius: 0.6rem;
 
     .task-card {
       opacity: 0;
