--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -1,28 +1,35 @@
-<!-- eslint-disable @angular-eslint/template/eqeqeq -->
 <div class="database-detail">
   <div class="database-detail__tree">
-    <mix-database-select [isCreate]="mode == 'create'"
-                         [prefix]="'Setting'"
-                         [selectedItemId]="id"
-                         (selectedItemChange)="selectedTableChange($event)"></mix-database-select>
+    <mix-database-select
+      [isCreate]="mode == 'create'"
+      [prefix]="'Setting'"
+      [selectedItemId]="id"
+      (selectedItemChange)="selectedTableChange($event)"
+    ></mix-database-select>
   </div>
 
   <div class="data-detail-page__content-container flex-grow-1">
-    <tui-loader *ngIf="loadingState$ | async as state"
-                class="data-detail-page"
-                [formGroup]="form"
-                [overlay]="true"
-                [showLoader]="state === 'Loading'">
+    <tui-loader
+      *ngIf="loadingState$ | async as state"
+      class="data-detail-page"
+      [formGroup]="form"
+      [overlay]="true"
+      [showLoader]="state === 'Loading'"
+    >
       <div class="data-detail-page__toolbar">
         <div class="data-detail-page__toolbar-top">
-          <span class="data-detail-page__input-title"
-                [class.--empty]="!form.controls.displayName.value">
-            <tui-input-inline *ngIf="editTitle; else text"
-                              (focusedChange)="onFocusedChange($event)"
-                              tuiAutoFocus
-                              (keydown.esc.prevent)="toggleEditTitle()"
-                              (keydown.enter.prevent)="toggleEditTitle()"
-                              formControlName="displayName">
+          <span
+            class="data-detail-page__input-title"
+            [class.--empty]="!form.controls.displayName.value"
+          >
+            <tui-input-inline
+              *ngIf="editTitle; else text"
+              (focusedChange)="onFocusedChange($event)"
+              tuiAutoFocus
+              (keydown.esc.prevent)="toggleEditTitle()"
+              (keydown.enter.prevent)="toggleEditTitle()"
+              formControlName="displayName"
+            >
               Type db name
             </tui-input-inline>
 
@@ -30,25 +37,28 @@
               <span>{{
                 form.controls.displayName.value || 'Type db name'
               }}</span>
-              <mix-button type="flat"
-                          [iconBtn]="true"
-                          [size]="'s'"
-                          (click)="toggleEditTitle()"><span class="mix-icon">edit</span></mix-button>
+              <mix-button
+                type="flat"
+                [iconBtn]="true"
+                [size]="'s'"
+                (click)="toggleEditTitle()"
+                ><span class="mix-icon">edit</span></mix-button
+              >
             </ng-template>
           </span>
 
-          <mix-button *ngIf="mode === 'update' && data"
-                      class="ml-auto"
-                      type="secondary"
-                      [size]="'s'"
-                      (click)="goDatabaseData(data.systemName)">
+          <mix-button
+            *ngIf="mode === 'update' && data"
+            class="ml-auto"
+            type="secondary"
+            [size]="'s'"
+            (click)="goDatabaseData(data.systemName)"
+          >
             View data source&nbsp;
             <span class="mix-icon"> arrow_right_alt </span>
           </mix-button>
 
-          <mix-button class="ms-2"
-                      [size]="'s'"
-                      (click)="submit()">
+          <mix-button class="ms-2" [size]="'s'" (click)="submit()">
             <span class="icon mix-icon"> save_as </span>
             {{ mode === 'create' ? 'Create' : 'Save' }}
           </mix-button>
@@ -57,13 +67,15 @@
         <div class="data-detail-page__toolbar-separator"></div>
 
         <div class="deta-detail-page__toolbar-bottom">
-          <nav [(activeItemIndex)]="activeTabIndex"
-               tuiTabs>
+          <nav [(activeItemIndex)]="activeTabIndex" tuiTabs>
             <button tuiTab>
               <span class="mix-icon"> feed </span>&nbsp; General
             </button>
             <button tuiTab>
               <span class="mix-icon"> settings </span>&nbsp; Columns Design
+            </button>
+            <button tuiTab>
+              <span class="mix-icon"> settings </span>&nbsp; Relationships
             </button>
           </nav>
         </div>
@@ -71,43 +83,59 @@
 
       <div class="data-detail-page__content">
         <!-- Main Content -->
-        <div class="data-detail-page__main-content"
-             [class.d-none]="activeTabIndex !== 0">
+        <div
+          class="data-detail-page__main-content"
+          [class.d-none]="activeTabIndex !== 0"
+        >
           <p class="content-label mt-3">Display Name</p>
-          <mix-input placeHolder="Your table friendly name"
-                     formControlName="displayName"></mix-input>
+          <mix-input
+            placeHolder="Your table friendly name"
+            formControlName="displayName"
+          ></mix-input>
 
-          <mix-form-error class="mt-1"
-                          formControlName="displayName"></mix-form-error>
+          <mix-form-error
+            class="mt-1"
+            formControlName="displayName"
+          ></mix-form-error>
 
           <p class="content-label mt-3">System Name</p>
           <div class="d-flex gap-1">
-            <mix-button [iconBtn]="true"
-                        [type]="'outline'"
-                        (click)="updateSystemName(form.value.displayName || '')"
-                        size="m"><span class="mix-icon">refresh</span></mix-button>
-            <mix-input placeHolder="Unique system name"
-                       formControlName="systemName"></mix-input>
+            <mix-button
+              [iconBtn]="true"
+              [type]="'outline'"
+              (click)="updateSystemName(form.value.displayName || '')"
+              size="m"
+              ><span class="mix-icon">refresh</span></mix-button
+            >
+            <mix-input
+              placeHolder="Unique system name"
+              formControlName="systemName"
+            ></mix-input>
           </div>
 
-          <mix-form-error class="mt-1"
-                          formControlName="systemName"></mix-form-error>
+          <mix-form-error
+            class="mt-1"
+            formControlName="systemName"
+          ></mix-form-error>
 
           <p class="content-label mt-3">Short Description</p>
-          <mix-text-area placeHolder="Description"
-                         formControlName="description"></mix-text-area>
+          <mix-text-area
+            placeHolder="Description"
+            formControlName="description"
+          ></mix-text-area>
 
           <div class="mt-3 notification --info">
             Visit
-            <a href="https://docs.mixcore.org/"
-               target="_blank">Here</a> to get
+            <a href="https://docs.mixcore.org/" target="_blank">Here</a> to get
             more information how Mixcore Database work.
           </div>
         </div>
 
         <!-- Content -->
-        <div class="data-detail-page__main-content"
-             [class.d-none]="activeTabIndex !== 1">
+        <div
+          class="data-detail-page__main-content"
+          [class.d-none]="activeTabIndex !== 1"
+        >
           <div class="mt-1 notification --info">
             Default system columns:
             <span class="text-highlight">id</span>,
@@ -133,27 +161,38 @@
             </div>
           </div>
 
-          <div (cdkDropListDropped)="drop($event)"
-               cdkDropList>
-            <mix-entity-form *ngFor="
-                let entity of data?.columns ?? [];
-                let i = index;
-                trackBy: identify
-              "
-                             [entity]="entity"
-                             (deleteEntity)="removeEntity($event, i)"
-                             (entityChange)="entityChange($event, i)"
-                             cdkDrag>
-              <span class="mix-icon cursor-grab"
-                    cdkDragHandle>drag_indicator</span>
-            </mix-entity-form>
+          <div class="card-list">
+            <div (cdkDropListDropped)="drop($event)" cdkDropList>
+              <mix-entity-form
+                *ngFor="
+                  let entity of data?.columns ?? [];
+                  let i = index;
+                  trackBy: identify
+                "
+                [entity]="entity"
+                (deleteEntity)="removeEntity($event, i)"
+                (entityChange)="entityChange($event, i)"
+                cdkDrag
+              >
+                <span class="mix-icon cursor-grab" cdkDragHandle
+                  >drag_indicator</span
+                >
+              </mix-entity-form>
+            </div>
           </div>
 
-          <div class="entity-table-footer mt-3">
-            <mix-button (click)="addNewEntity()"
-                        size="s"><span class="mix-icon">add</span> Add new columns</mix-button>
+          <div class="mt-3">
+            <mix-button (click)="addNewEntity()" size="s"
+              ><span class="mix-icon">add</span> Add new columns</mix-button
+            >
           </div>
         </div>
+
+        @defer(when activeTabIndex === 2) {
+        <div class="data-detail-page__main-content">
+          <mix-database-relationship></mix-database-relationship>
+        </div>
+        }
       </div>
     </tui-loader>
   </div>
